crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__compare.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprCompare
      - ExprConstant
        - Int(4)
      - Lt
      - ExprName
      - Lt
      - ExprConstant
        - Int(5)

