crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__decorators.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - ExprName
    - Arguments
    - StmtPass
  - StmtClassDef
    - ExprName
    - StmtPass

