crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__dict_comprehension.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprDictComp
      - ExprName
      - ExprBinOp
        - ExprName
        - Pow
        - ExprConstant
          - Int(2)
      - Comprehension
        - ExprName
        - ExprName

