crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__function_arguments.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - Arguments
      - Arg
      - Arg
      - Arg
      - Arg
      - ExprConstant
        - Int(20)
      - Arg
      - Arg
      - ExprConstant
        - Int(5)
      - Arg
      - ExprConstant
        - Int(20)
      - Arg
    - StmtPass

