crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtFunctionDef
    - Arguments
      - Arg
      - Arg
      - ExprConstant
        - Int(34)
      - Arg
      - ExprConstant
        - Int(20)
      - Arg
    - StmtPass

