crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__list_comprehension.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprListComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName

