crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__match_class_pattern.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtMatch
    - ExprName
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternMatchValue
          - ExprConstant
            - Int(0)
        - PatternMatchValue
          - ExprConstant
            - Int(0)
      - StmtExpr
        - ExprConstant
          - Ellipsis
    - MatchCase
      - PatternMatchClass
        - ExprName
        - PatternMatchValue
          - ExprConstant
            - Int(0)
        - PatternMatchValue
          - ExprConstant
            - Int(0)
        - PatternMatchValue
          - ExprConstant
            - Int(0)
      - StmtExpr
        - ExprConstant
          - Ellipsis

