crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__set_comprehension.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtExpr
    - ExprSetComp
      - ExprName
      - Comprehension
        - ExprName
        - ExprName

