crates/ruff_python_ast/src/visitor/snapshots/ruff_python_ast__visitor__preorder__tests__type_aliases.snap
---
source: crates/ruff_python_ast/src/visitor/preorder.rs
expression: trace
---
- ModModule
  - StmtTypeAlias
    - ExprName
    - ExprName
    - ExprSubscript
      - ExprName
      - ExprName

